<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="rail_journey">Rail journey</string>
    <string name="bus_tram_journeys">Bus and/or tram journeys</string>
    <string name="number_of_journeys_format">Number of journeys: %d</string>
    <string name="home_about">About</string>
    <string name="home_app_info">App developed by Alan Camargo. Powered by TfL Open Data. Contains OS data © Crown copyright and database rights 2016. Contains Geomni UK Map data © and database rights [2019].</string>
    <string name="add_journey">Add journey</string>
    <string name="calculate">Calculate</string>
    <string name="rail">Rail</string>
    <string name="bus_tram">Bus/tram</string>
    <string name="no_journeys">You have no journeys yet. To add one, click here</string>
    <string name="no_journeys_accessible">You have no journeys yet. To add one, click on the add journey button</string>
    <string name="first_access_title">Welcome!</string>
    <string name="first_access_message">Let\'s make sure you\'re happy with the way your data is handled.\n\nYou can always change it later if you want.</string>
    <string name="not_now">Not now</string>
    <string name="deleting_journeys">Deleting journeys</string>
    <string name="deleting_journeys_message">To delete a journey, swipe the card to the left</string>
    <string name="powered_by">Powered by TfL Open Data</string>
</resources>
